--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react_task",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://raneemmagdy.github.io/React_App",
+  "homepage": "https://raneemmagdy.github.io/ReactRoutionApp",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,11 +15,12 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
- "scripts": {
+  "scripts": {
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-}
-,
+   "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
